Добавил раздел БЖД

--- a/inc/8-lifesafety.tex
+++ b/inc/8-lifesafety.tex
@@ -1,3 +1,185 @@
 \section{Безопасность жизнедеятельности}
 
+\subsection{Краткая характеристика помещения}
+
+Согласно санитарным нормам, ширина стола должна быть не менее 60~см, глубина не менее 80~см, также необходимо обеспечить расстояние между боковыми поверхностями мониторов не менее 1.2~м.
+
+На рис. \ref{roomplan} изображена планировка и размещение оборудования на рабочем месте.
+\addimghere{roomplan}{1}{Планировка и размещение оборудования на рабочем месте \\
+1 --- дверь; 2 --- тумбочка; 3 --- стол; 4 --- ноутбук; 5 --- монитор; 6 --- планшет; 7 --- кровать; 8 --- шкаф; 9 --- обеденный стол; 10 --- холодильник}{roomplan}
+
+\subsection{Микроклимат}
+
+Метеорологические условия (микроклимат) характеризуются следующими параметрами:
+\begin{itemize}
+  \item температурой воздуха;
+  \item относительной влажностью;
+  \item скоростью движения воздуха на рабочем месте;
+  \item барометрическим давлением.
+\end{itemize}
+
+В комнате, где находится персональный компьютер, должен поддерживаться определенный температурный режим для нормальной эксплуатации ЭВМ и условий труда администратора.
+
+Параметры воздушной среды в кабинете должны соответствовать требованиям ГОСТ 12.1.005-88 <<Воздух рабочей зоны>>.
+При этом необходимо учитывать, что работа администратора относится к разряду легких работ (разряд 1а --- затраты энергии до 150 ккал/час), а кабинет --- к производственным помещениям.
+
+В помещении имеются источники избыточного тепла:
+\begin{itemize}
+  \item тепловыделение от ноутбука;
+  \item тепло, выделяемое персоналом.
+\end{itemize}
+
+Тепловыделение от светильников отсутствует, так как используется люминисцентное освещение.
+Для поддержания оптимального уровня температуры используется как естественная вентиляция (через двери и окна путем проветривания), так и искусственная (при помощи вентилятора), так как в текущих условиях проживания невозможно установить кондиционер.
+Для обогрева помещения в зимнее время используется водяное отопление.
+
+\subsection{Шум и вибрация}
+
+Источниками шума в помещении являются:
+\begin{itemize}
+  \item непосредственно персональный компьютер (вентиляторы охлаждения процессора и видеокарты);
+  \item разговорная речь;
+  \item шум вне рабочей зоны.
+\end{itemize}
+
+Постоянный шум оказывает отрицательное воздействие на человека, как биологически, так и психологически, что отражается на качестве работы и общей производительности труда сотрудников.
+Снижается производительность труда и повышается количество допущенных ошибок, некоторые из которых могут быть критическими.
+
+В помещениях для администраторов по ГОСТ 12.1.003-83 <<Шум. Общие требования безопасности>> допустимые уровни звукового давления приведены в табл. \ref{sound-tab}.
+Допустимый уровень звука --- 50~дБА, при работающем оборудовании в кабинете ожидаемый уровень звука --- 40-48~дБА.
+\begin{table}[H]
+  \caption{Допустимые уровни звукового давления}\label{sound-tab}
+  \begin{tabular}{|c|c|}
+  \hline Тип помещения & Допустимые уровни звукового давления \\
+  \hline Служебные помещения & 50~дБА \\
+  \hline Помещения для отдыха & 38~дБА \\
+  \hline 
+  \end{tabular}
+\end{table}
+
+Сравнив допустимый и ожидаемый уровни звука в помещении, видно, что нет необходимости проводить мероприятия по борьбе с шумом.
+
+\subsection{Освещение}
+
+В зависимости от необходимости, производственное освещение в кабинете может быть как естественным, создаваемым непосредственно солнцем и диффузным (рассеянным) светом, так и искусственным, осуществляемым электрическими лампами.
+Естественное освещение характеризуется тем, что создаваемое освещение изменяется в очень широких пределах, в зависимости от времени года, дня и метеорологических факторов.
+При выборе норм естественного освещения учитывается разряд выполняемых работ, система освещения, коэффициент солнечности, коэффициент светового климата.
+По СНиП П-4-79 для 3 разряда зрительной работы (контраст большой, фон светлый) освещенность при боковом освещении от окон равна 2.0\%.
+
+Для искусственного освещения учитывается разряд выполняемых зрительных работ, подразряд работы, вид ламп, система освещения.
+В данном случае подразряд работы будет <<В>> при котором нормируемое значение для комбинированного освещения 2500~лк и 750~лк для общего освещения.
+
+В кабинете имеются светильники с люминесцентными лампами расположены параллельно стене.
+Коэффициент естественного освещения E\textsubscript{H} должен быть не ниже 1.5\%.
+
+Мероприятия, за счет которых выполняются требования норм СНиП П-4-79:
+\begin{itemize}
+  \item проверка, не реже одного раза в год, соответствия освещенности на рабочей поверхности нормам искусственного освещения;
+  \item очистка светильников не реже одного раза в три месяца;
+  \item протирка окон (стекол) не реже двух раз в год.
+\end{itemize}
+
+Освещение рабочих мест в помещении для работы администратора должно планироваться так, чтобы свет не падал прямо в глаза, отсутствовали мерцающие тени, блики, <<мигание>> люминесцентных ламп, яркость должна быть распределена равномерно. 
+
+\subsection{Электробезопасность}
+
+В кабинет электроэнергия поступает для питания персональных компьютеров и электрического освещения.
+Питание осуществляется от трехфазной сети переменного тока напряжением 380/220~В (+10..-15\%) частотой 50~Гц (+1~Гц).
+
+Поскольку помещение сухое (относительная влажность не более 75\%), температура не превышает 30~°С, то, согласно ПУЭ (<<Правилам устройства электроустановок>>), оно не относится к категории помещений повышенной опасности.
+Однако возможна потенциальная опасность поражения людей электрическим током.
+Источниками и причинами опасности являются:
+\begin{itemize}
+  \item открытые токопроводящие части оборудования, кабельной проводки;
+  \item неисправность электрооборудования, электрических розеток;
+  \item короткое замыкание в результате повреждения изоляции.
+\end{itemize}
+
+Для предотвращения поражения электрическим током потребителей электроэнергии в кабинете необходимо предусмотреть следующие технические мероприятия:
+\begin{itemize}
+  \item все токопроводящие части оборудования и кабельной проводки должны быть защищены ограждающими кожухами;
+  \item все металлические конструкции, которые могут оказаться под напряжением в результате короткого замыкания, должны быть заземлены, защищены и выполнено защитное   отключение.
+\end{itemize}
+
+В качестве заземляющих проводников должны быть использованы элементы металлических конструкций, металлическое обрамление кабельных каналов.
+Здание должно быть оборудовано комплексом мер, предотвращающих попадание энергии молнии в электрическую сеть, а также поражение людей, для чего на здание устанавливаются громоотводы.
+
+Кроме технических, необходимо проведение организационных мероприятий:
+\begin{itemize}
+  \item к работе с электроустановками допускаются только лица, прошедшие инструктаж и проверку знаний правил техники безопасности в соответствии с ГОСТ 12.0.004-79, ПТЭ и ПТБ;
+  \item периодически осуществляется контроль сопротивления электрической изоляции токоведущих частей (в соответствии с требованиями ПУЭ, оно не должно быть ниже 0.5~мм по отношению к корпусу ЭВМ).
+\end{itemize}
+
+\subsection{Пожаробезопасность}
+
+Пожар в помещении может возникнуть при взаимодействии горючих веществ, окислителя (условия пожара) и источников воспламенения (причина пожара).
+Горючие вещества в кабинете: деревянные столы, двери, полы (паркет), покрытия стен, изоляция соединительных кабелей, жидкости для протирки узлов компьютера и другие.
+
+Возможные источники и причины возникновения пожара:
+\begin{itemize}
+  \item эксплуатация неиспользованного оборудования;
+  \item неправильное применение электронагревательных приборов;
+  \item короткое замыкание;
+  \item неисправность проводки;
+  \item нарушение правил пожарной безопасности.
+\end{itemize}
+
+Для отвода тепла от персонального компьютера необходимы работающие вентиляторы, помещение проветривается, поэтому кислород, как окислитель процессов горения, имеется в достаточном количестве.
+Исходя из этого, помещение кабинета, согласно нормам СНиП-П-90-81, по степени пожаробезопасности следует отнести к категории Д (помещения, в которых в обращении находятся негорючие вещества и материалы в холодном состоянии).
+
+В качестве средств тушения пожара применяются углекислотные огнетушители, используемые для тушения электроустановок, находящихся под напряжением.
+
+\subsection{Эргономика и техническая эстетика}
+
+Эффективность работы администратора (программиста) во многом зависит от организации рабочих мест.
+Рабочее положение администратора --- сидячее.
+Стул по возможности должен быть регулируемым по высоте, поскольку клавиатура и дисплей компьютеров должны находиться в зоне наилучшего обзора.
+Для сохранения работоспособности имеет большое значение выбор основной рабочей позы.
+
+Техническая эстетика позволяет снижать нервное утомление и вредные воздействия на функции организма в процессе труда.
+Огромное значение в эстетическом оформлении производства имеет цвет.
+Окраска, форма, внешний вид производственного помещения и оборудования улучшают условия освещения, а также психологическое состояние человека. Стены имеют светло-зеленый цвет, не вызывающий раздражения, потолок --- белый цвет, что обеспечивает максимальное отражение света.
+
+Рассматриваемое помещение соответствует требованиям ГОСТ 12.2.032-78.
+    	
+\subsection{Режим труда и отдыха}
+
+Работа администратора относится к категории работ связанных с опасными и вредными условиями труда.
+В процессе труда на администратора оказывают действие следующие опасные и вредные производственные факторы.
+Физические:
+\begin{itemize}
+  \item повышенный уровень статического электричества;
+  \item повышенные уровни запыленности воздуха рабочей зоны;
+  \item повышенный уровень шума;
+  \item повышенный или пониженный уровень освещенности;
+  \item неравномерность распределения яркости в поле зрения;
+  \item повышенная яркость светового изображения;
+  \item повышенное значение напряжения в электрической цепи, замыкание которой может произойти через тело человека.
+\end{itemize}
+
+Химические:
+\begin{itemize}
+  \item напряжение зрения;
+  \item напряжение внимания;
+  \item интеллектуальные нагрузки;
+  \item монотонность труда;
+  \item большой объем информации, обрабатываемой в единицу времени;
+  \item нерациональная организация рабочего места.
+\end{itemize}
+
+Биологическим фактором является повышенное содержание в воздухе рабочей зоны микроорганизмов.
+
+Рациональный режим труда и отдыха --- это правильное чередование работы и перерывов в ней в течение смены, суток, недели, года, устанавливаемое с целью обеспечения высокой производительности труда и сохранения здоровья работающих.
+Основным перерывом является перерыв на обед.
+Обеденный перерыв при 8-часовой рабочей смене устанавливается продолжительностью не менее 30~мин. через 4 часа после начала работы.
+
+Режим отдыха складывается из нескольких компонентов:
+\begin{itemize}
+  \item времени на гигиенические процедуры и личные надобности (2-3) от сменного времени независимо от вида труда;
+  \item времени регламентированных перерывов на отдых (входят в состав рабочего времени), определяемого по показателю условий труда или по интегральному показателю снижения работоспособности;
+  \item времени микропауз, а также времени обеденного перерыва (нерабочего времени), остающегося от приема пищи.
+\end{itemize}
+
+Режим труда и отдыха должен быть построен в соответствии с особенностями трудовой деятельности пользователей персонального компьютера и характером функциональных изменений со стороны различных систем организма работников.
+
 \clearpage
