Добавил информацию о Hyper-V

--- a/inc/0-bibliography.tex
+++ b/inc/0-bibliography.tex
@@ -38,6 +38,12 @@
     Электрон. текстовые данные (79196 bytes) --
     Режим доступа: http://www.ibm.com/developerworks/ru/library/cl-hypervisorcompare-kvm/
 
+\bibitem{hyper-v}
+    Hyper-V drivers in mainline kernel - what's next
+    [Электронный ресурс]. --
+    Электрон. текстовые данные (146405 bytes) --
+    Режим доступа: https://social.technet.microsoft.com/Forums/en-US/7007beff-db11-4261-a9f2-0f4461a9cc92/hyperv-drivers-in-mainline-kernel-whats-next
+
 \bibitem{xen-xguru}
     Руководство пользователя Xen v3.0
     [Электронный ресурс]. --
@@ -67,6 +73,8 @@
     [Электронный ресурс]. --
     Электрон. текстовые данные (32477 bytes) --
     Режим доступа: http://www.bw-it.ru/virtualization\_virtual\_infrastructure.php
+
+
 
 % то что использовал пока
 
