Левое поле 3 см

--- a/inc/8-lifesafety.tex
+++ b/inc/8-lifesafety.tex
@@ -171,7 +171,7 @@
 
 Рациональный режим труда и отдыха --- это правильное чередование работы и перерывов в ней в течение смены, суток, недели, года, устанавливаемое с целью обеспечения высокой производительности труда и сохранения здоровья работающих.
 Основным перерывом является перерыв на обед.
-Обеденный перерыв при 8-часовой рабочей смене устанавливается продолжительностью не менее 30~мин. через 4 часа после начала работы.
+Обеденный перерыв при 8-часовой рабочей смене устанавливается продолжительностью не менее 30~мин через 4 часа после начала работы.
 
 Режим отдыха складывается из нескольких компонентов:
 \begin{itemize}
