--- a/inc/preamble.tex
+++ b/inc/preamble.tex
@@ -52,7 +52,7 @@
 \makeatother
 
 \renewcommand{\baselinestretch}{1.4} % Полуторный межстрочный интервал
-\parindent 12.7mm % Абзацный отступ
+\parindent 1.27cm % Абзацный отступ
 
 \sloppy             % Избавляемся от переполнений
 \hyphenpenalty=1000 % Частота переносов
@@ -61,7 +61,7 @@
 
 % Отступы у страниц
 \usepackage{geometry}
-\geometry{left=2cm}
+\geometry{left=3cm}
 \geometry{right=1cm}
 \geometry{top=2cm}
 \geometry{bottom=2cm}
