Подогнал текст под новые поля. Схема комнаты теперь видна при распечатке, увеличил тощину линий.

--- a/inc/0-bibliography.tex
+++ b/inc/0-bibliography.tex
@@ -76,6 +76,7 @@
 
 % то что использовал пока
 
+\iffalse
 \bibitem{antonova-zaika} Лукъянчук А.Г., Антонова Г.З., Заика Е.В. 
     Положение об организации дипломного проектирования в СевНТУ / 
     Лукъянчук А.Г., Антонова Г.З., Заика Е.В. -- Севастополь: 
@@ -155,6 +156,7 @@
     [Электронный ресурс]. --
     Электрон. текстовые данные (37869 bytes) --
     Режим доступа: http://openvz.org/Performance
+\fi
 
 \end{thebibliography}
 \endgroup
