--- a/inc/3-analyze.tex
+++ b/inc/3-analyze.tex
@@ -156,6 +156,9 @@
 \subsection{Принцип иерархии}
 
 Полезно введение иерархии частей и их ранжирование, что упрощает разработку системы и устанавливает порядок рассмотрения частей.
+Разработка иерархий классов является нетривиальной задачей.
+Грамотно спроектированные иерархии классов позволяют создавать высокоэффективные системы.
+Плохо спроектированная иерархия приводит к созданию сложных и запутанных систем.
 
 Выполнение принципа иерархичности для разрабатываемой системы на примере подсистемы защиты и обеспечения целостности данных проиллюстрировано на рис. \ref{hierarchy-princ}.
 \addimghere{hierarchy-princ}{1}{Принцип иерархии на примере подсистемы защиты и обеспечения целостности данных}{hierarchy-princ}
