--- a/inc/8-lifesafety.tex
+++ b/inc/8-lifesafety.tex
@@ -6,7 +6,7 @@
 
 На рис. \ref{roomplan} изображена планировка и размещение оборудования на рабочем месте.
 \addimghere{roomplan}{1}{Планировка и размещение оборудования на рабочем месте \\
-1 --- дверь; 2 --- тумбочка; 3 --- стол; 4 --- ноутбук; 5 --- монитор; 6 --- планшет; 7 --- кровать; 8 --- шкаф; 9 --- обеденный стол; 10 --- холодильник}{roomplan}
+1 --- дверь; 2 --- тумбочка; 3 --- холодильник; 4 --- стол; 5 --- кресло; 6 --- ноутбук; 7 --- монитор; 8 --- планшет; 9 --- кровать; 10 --- окно; 11 --- шкаф; 12 --- обеденный стол}{roomplan}
 
 \subsection{Микроклимат}
 
