Сокращения типа рис. теперь нет

--- a/inc/3-analyze.tex
+++ b/inc/3-analyze.tex
@@ -24,7 +24,7 @@
 \begin{equation} \label{blackbox-eq}
 \text{Y=F(X, Z)}
 \end{equation}
-где Y --- выходной вектор системы, который функционально зависит от входного вектора X и вектора внутреннего состояния системы Z (рис. \ref{blackbox-pic}).
+где Y --- выходной вектор системы, который функционально зависит от входного вектора X и вектора внутреннего состояния системы Z (рисунке \ref{blackbox-pic}).
 Входными данными (вектор X) будут являться запросы пользователей на обработку и обслуживание.
 Внутреннее состояние системы (вектор Z) представляет собой создание услуг по требованию пользователя.
 Выходными данными (вектор Y) будут являться предоставление доступа к услугам пользователя.
@@ -62,10 +62,10 @@
   \item подсистема защиты и обеспечения целостности данных.
 \end{enumerate}
 
-На рис. \ref{subsystems} представлена схема взаимодействия между подсистемами.
+На рисунке \ref{subsystems} представлена схема взаимодействия между подсистемами.
 \addimghere{subsys}{0.8}{Взаимодействие между подсистемами и их связь с окружающей средой}{subsystems}
 
-Обозначения, приведенные на рис. \ref{subsystems} требуют пояснения:
+Обозначения, приведенные на рисунке \ref{subsystems} требуют пояснения:
 \begin{itemize}[label={}]
   \item a --- информация, предоставляемая пользователем, передается на сервер;
   \item b --- выходная информация (результат выполнения);
@@ -77,7 +77,7 @@
   \item h --- обеспечение целостности данных пользователя.
 \end{itemize}
 
-На рис. \ref{subsystems-1} представлена структура проектируемой системы в виде ориентированного графа.
+На рисунке \ref{subsystems-1} представлена структура проектируемой системы в виде ориентированного графа.
 
 Приняты те же обозначения, что приведены выше.
 \addimghere{subsys-1}{0.8}{Структура проектируемой системы, представленная в виде ориентированного графа}{subsystems-1}
@@ -87,16 +87,16 @@
 Рассмотрение любой части совместно с ее окружением подразумевает проведение процедуры выявления связей между элементами системы и выявление связей со средой.
 В соответствии с этим принципом систему в первую очередь следует рассматривать как часть другой системы, называемой суперсистемой или старшей системой.
 
-Подсистема взаимодействия с пользователем представлена на рис. \ref{user-subsys}.
+Подсистема взаимодействия с пользователем представлена на рисунке \ref{user-subsys}.
 \addimghere{user-subsys}{1}{Внутренние и внешние связи подсистемы взаимодействия с пользователем}{user-subsys}
 
-Подсистема управления услугами представлена на рис. \ref{service-subsys}.
+Подсистема управления услугами представлена на рисунке \ref{service-subsys}.
 \addimghere{service-subsys}{1}{Внутренние и внешние связи подсистемы управления услугами}{service-subsys}
 
-Подсистема управления инфраструктурой представлена на рис. \ref{infrast-subsys}.
+Подсистема управления инфраструктурой представлена на рисунке \ref{infrast-subsys}.
 \addimghere{infrast-subsys}{1}{Внутренние и внешние связи подсистемы управления инфраструктурой}{infrast-subsys}
 
-Подсистема защиты и обеспечения целостности данных представлена на рис. \ref{security-subsys}.
+Подсистема защиты и обеспечения целостности данных представлена на рисунке \ref{security-subsys}.
 \addimghere{security-subsys}{1}{Внутренние и внешние связи подсистемы защиты и обеспечения целостности данных}{security-subsys}
 
 \subsection{Принцип модульности}
@@ -104,7 +104,7 @@
 Полезно выделение модулей в системе и рассмотрение ее как совокупности модулей.
 Принцип указывает на возможность вместо части системы исследовать совокупность ее входных и выходных воздействий (абстрагирование от излишней детализации).
 
-Принцип модульности для разрабатываемой системы поясняется с помощью рис. \ref{modules}, описывающего разбиение на модули системы взаимодействия с пользователем.
+Принцип модульности для разрабатываемой системы поясняется с помощью рисунке \ref{modules}, описывающего разбиение на модули системы взаимодействия с пользователем.
 \addimghere{modules}{1}{Принцип модульности на примере подсистемы взаимодействия с пользователем}{modules}
 
 Излишняя детализация не требуется, поэтому остальные системы на модули принято решение не разбивать.
@@ -124,9 +124,9 @@
 
 С этой точки зрения структура есть множество ограничений на потоки в пространстве и времени.
 
-Функции подсистем приведены в п. \ref{goal}.
+Функции подсистем приведены в пункте \ref{goal}.
 
-Матрица инциденций функций системы и функций назначения подсистем приведена в табл. \ref{inc-matrix}.
+Матрица инциденций функций системы и функций назначения подсистем приведена в таблице \ref{inc-matrix}.
 \begin{table}[H]
   \caption{Матрица инциденций}\label{inc-matrix}
   \begin{tabular}{|c|c|c|c|c|c|}
@@ -160,7 +160,7 @@
 Грамотно спроектированные иерархии классов позволяют создавать высокоэффективные системы.
 Плохо спроектированная иерархия приводит к созданию сложных и запутанных систем.
 
-Выполнение принципа иерархичности для разрабатываемой системы на примере подсистемы защиты и обеспечения целостности данных проиллюстрировано на рис. \ref{hierarchy-princ}.
+Выполнение принципа иерархичности для разрабатываемой системы на примере подсистемы защиты и обеспечения целостности данных проиллюстрировано на рисунке \ref{hierarchy-princ}.
 \addimghere{hierarchy-princ}{1}{Принцип иерархии на примере подсистемы защиты и обеспечения целостности данных}{hierarchy-princ}
 
 \subsection{Принцип сочетания централизации и децентрализации}
