--- a/inc/0-intro.tex
+++ b/inc/0-intro.tex
@@ -1,19 +1,18 @@
 \anonsection{Введение}
 
 Облачные услуги --- это способ предоставления, потребления и управления технологией.
-Они выводят гибкость и эффективность на революционный уровень, путем эволюции способов управления, таких как резервирование, самообслуживание, безопасность и непрерывность, которые соединяют физическую и виртуальную среду.
-Следовательно, возрастает потребность в качественно продуманной архитектуре, позволяющей правильно и надежно организовать облачную инфраструктуру.
+Данный тип услуг выводит гибкость и эффективность на новый уровень, путем эволюции способов управления, таких как непрерывность, безопасность, резервирование и самообслуживание, которые соединяют физическую и виртуальную среду.
+В данной сфере возрастает потребность в качественно продуманной архитектуре, позволяющей надежно и правильно организовать облачную инфраструктуру.
 
-Для эффективной облачной инфраструктуры требуется эффективная структура и организация.
-Определение и использование стандартов на каждом этапе работы, при размещении в стойках от отдельных компьютеров до отдельных кабелей и от рядовых операций до безопасности, позволяет сэкономить значительное время и правильно организовать процессы.
-
-Небольшая команда из специалистов и бизнес-пользователей может создать обоснованный план и организовать свою работу в облачной инфраструктуре.
-Эта выделенная группа может намного эффективнее построить и управлять нестандартной облачной инфраструктурой, чем если компании будут просто продолжать добавлять дополнительные серверы и сервисы для поддержки центра обработки данных.
+Для эффективной работы облачной инфраструктуры требуется эффективная структура и организация.
+Небольшая команда из специалистов и бизнес-пользователей может создать обоснованный план и организовать свою работу в инфраструктуре.
+Данная выделенная группа может намного эффективнее построить и управлять нестандартной облачной инфраструктурой, чем если компании будут просто продолжать добавлять дополнительные сервера и сервисы для поддержки центра обработки данных (ЦОД).
 
 IaaS (Infrastructure as a Service) --- это предоставление пользователю компьютерной и сетевой инфраструктуры и их обслуживание как услуги в форме виртуализации, то есть виртуальной инфраструктуры.
 Другими словами, на базе физической инфраструктуры дата-центров (ДЦ) провайдер создает виртуальную инфраструктуру, которую предоставляет пользователям как сервис.
+Стоит отметить, что IaaS не предполагает передачи в аренду программного обеспечения, а всего лишь предоставляет доступ к вычислительным мощностям.
 
-Технология виртуализации ресурсов позволяет физическое оборудование (серверы, хранилища данных, сети передачи данных) разделить между пользователями на несколько частей, которые используются ими для выполнения текущих задач.
-Например, на одном физическом сервере можно запустить сотни виртуальных серверов, а пользователю для решения задач выделить время доступа к ним.
+Технология виртуализации ресурсов позволяет физическое оборудование (сервера, хранилища данных, сети передачи данных) разделить между пользователями на несколько частей, которые используются ими для выполнения текущих задач.
+К примеру, на одном физическом сервере можно запустить сотни виртуальных серверов, а пользователю для решения задач выделить время доступа к ним.
 
 \clearpage
