Дополнил и переформулировал обзор литературы

--- a/inc/8-lifesafety.tex
+++ b/inc/8-lifesafety.tex
@@ -4,7 +4,7 @@
 
 Согласно санитарным нормам, ширина стола должна быть не менее 60~см, глубина не менее 80~см, также необходимо обеспечить расстояние между боковыми поверхностями мониторов не менее 1.2~м.
 
-На рис. \ref{roomplan} изображена планировка и размещение оборудования на рабочем месте.
+На рисунке \ref{roomplan} изображена планировка и размещение оборудования на рабочем месте.
 \addimghere{roomplan}{1}{Планировка и размещение оборудования на рабочем месте \\
 1 --- дверь; 2 --- тумбочка; 3 --- холодильник; 4 --- стол; 5 --- кресло; 6 --- ноутбук; 7 --- монитор; 8 --- планшет; 9 --- кровать; 10 --- окно; 11 --- шкаф; 12 --- обеденный стол}{roomplan}
 
@@ -45,7 +45,7 @@
 Постоянный шум оказывает отрицательное воздействие на человека, как биологически, так и психологически, что отражается на качестве работы и общей производительности труда сотрудников.
 Снижается производительность труда и повышается количество допущенных ошибок, некоторые из которых могут быть критическими.
 
-В помещениях для администраторов по ГОСТ 12.1.003-83 <<Шум. Общие требования безопасности>> допустимые уровни звукового давления приведены в табл. \ref{sound-tab}.
+В помещениях для администраторов по ГОСТ 12.1.003-83 <<Шум. Общие требования безопасности>> допустимые уровни звукового давления приведены в таблице \ref{sound-tab}.
 Допустимый уровень звука --- 50~дБА, при работающем оборудовании в кабинете ожидаемый уровень звука --- 40-48~дБА.
 \begin{table}[H]
   \caption{Допустимые уровни звукового давления}\label{sound-tab}
