Дополнил и переформулировал системный анализ

--- a/inc/3-analyze.tex
+++ b/inc/3-analyze.tex
@@ -2,21 +2,21 @@
 
 На данный момент при анализе и синтезе сложных программных и аппаратных систем все чаще используется системный подход.
 Важным моментом для системного подхода является определение структуры системы --- совокупности связей между элементами системы, отражающих их взаимодействие.
-Совокупность элементов и связей между ними позволяет судить о структуре системы.
 
-Принципы системного анализа --- это некоторые положения общего характера, являющиеся обобщением опыта работы человека со сложными системами.
-Общепринятых формулировок в настоящее время нет, но все формулировки так или иначе описывают одни и те же понятия.
+Принципы системного анализа --- это положения общего характера, являющиеся обобщением опыта работы человека со сложными системами.
 Пренебрежение принципами при проектировании любой нетривиальной технической системы, непременно приводит к потерям того или иного характера, от увеличения затрат в процессе проектирования до снижения качества и эффективности конечного продукта.
 
 Системный анализ выполнен в соответствии с \cite{sys-analyz}.
 
 \subsection{Принцип конечной цели} \label{goal}
 
-Принцип конечной цели --- это абсолютный приоритет конечной цели, он имеет несколько правил:
+Принцип конечной цели --- основополагающий принцип системного анализа.
+Конечная цель имеет абсолютный приоритет, в системе все должно быть подчинено достижению конечной цели.
+Принцип имеет несколько правил:
 \begin{itemize}
-  \item для проведения системного анализа необходимо, в первую очередь, сформулировать цель функционирования системы, так как не полностью определенные цели влекут за собой неверные выводы;
-  \item анализ системы следует вести на базе уяснения основной цели, что позволит определить существенные свойства показателей качества и критериев оценки;
-  \item при синтезе систем любая попытка изменения или совершенствования должна оцениваться относительно конечной цели;
+  \item для проведения системного анализа необходимо в первую очередь, сформулировать цель функционирования системы, так как расплывчатые, не полностью определенные цели влекут за собой неверные выводы;
+  \item анализ системы следует вести на базе первоочередного уяснения основной цели исследуемой системы, что позволит определить ее существенные свойства, показатели качества и критерии оценки;
+  \item при синтезе систем любая попытка изменения или совершенствования должна быть в первую очередь рассмотрена с позиции его полезности в достижении конечной цели;
   \item цель функционирования искусственной системы задается, как правило, системой, в которой исследуемая система является составной частью.
 \end{itemize}
 
@@ -31,7 +31,6 @@
 \addimghere{blackbox}{0.6}{Проектируемая система в виде черного ящика}{blackbox-pic}
 
 В соответствии с данным принципом должна быть четко сформулирована конечная цель --- назначение проектируемой системы и сформирован список функций, которые должна выполнять система.
-Кроме того, необходимо определить перечень входных воздействий, на которые реагирует система.
 
 Цель проектирования --- разработка виртуальной инфраструктуры для реализации облачных услуг.
 Список функций проектируемой системы:
@@ -43,16 +42,13 @@
   \item Ф5 --- мониторинг состояния инфраструктуры.
 \end{itemize}
 
-Перечень входных воздействий на систему:
-\begin{itemize}
-  \item внесение изменений данных о заявке;
-  \item мониторинг хода решения заявки.
-\end{itemize}
-
 \subsection{Принцип единства}
 
 Принцип единства --- это совместное рассмотрение системы как целого и как совокупности частей.
 Принцип ориентирован на декомпозицию с сохранением целостных представлений о системе.
+Система должна рассматриваться и как целое, и как совокупность элементов.
+Расчленение системы необходимо производить, сохраняя целостное представление о системе.
+Принцип подразумевает выделение подсистем, композиция которых в совокупности со связями позволяет выполнять все функции проектируемой системы, определяет ее структуру и может быть рассмотрена как единая, целостная система
 
 На основании функций проектируемой системы, представленных выше, в ней можно выделить следующие подсистемы:
 \begin{enumerate}
@@ -77,10 +73,11 @@
   \item h --- обеспечение целостности данных пользователя.
 \end{itemize}
 
-\subsection{Определение взаимосвязей между подсистемами на основе принципа связности}
+\subsection{Принцип связности}
 
-Рассмотрение любой части совместно с ее окружением подразумевает проведение процедуры выявления связей между элементами системы и выявление связей со средой.
-В соответствии с этим принципом систему в первую очередь следует рассматривать как часть другой системы, называемой суперсистемой или старшей системой.
+Любая часть системы должна рассматриваться со всеми своими связями с окружающими ее объектами, как внешними по отношению ко всей системе, так и внутренними --- другими элементами системы.
+Если некоторая подсистема имеет связи только с внешней средой, то есть смысл реализовать ее в виде отдельной системы.
+Подсистема, не связанная ни с внешней средой, ни с другой подсистемой, является избыточной и должна быть удалена из системы.
 
 Подсистема взаимодействия с пользователем представлена на рисунке \ref{user-subsys}.
 \addimghere{user-subsys}{1}{Внутренние и внешние связи подсистемы взаимодействия с пользователем}{user-subsys}
@@ -96,28 +93,24 @@
 
 \subsection{Принцип модульности}
 
-Полезно выделение модулей в системе и рассмотрение ее как совокупности модулей.
-Принцип указывает на возможность вместо части системы исследовать совокупность ее входных и выходных воздействий (абстрагирование от излишней детализации).
+В соответствии с этим принципом, выделение модулей системы, если таковые имеются, продуктивно и оправдано.
+Под модулями здесь понимаются относительно автономные и достаточно простые блоки, выполняющие ограниченный набор функций.
+Модуль в отличие от подсистем, которые имеют нерегулярную структуру и, как правило, несут определенную функцию, частично отражающую функцию системы, имеет регулярную структуру и характерные для него внутренние и внешние связи.
+Принцип указывает на возможность вместо части системы исследовать совокупность ее входных и выходных воздействий.
+Выделению модулей соответствует декопмозиция сложной задачи на множество более простых подзадач.
 
-Принцип модульности для разрабатываемой системы поясняется с помощью рисунке \ref{modules}, описывающего разбиение на модули системы взаимодействия с пользователем.
-\addimghere{modules}{1}{Принцип модульности на примере подсистемы взаимодействия с пользователем}{modules}
+Принцип модульности для разрабатываемой системы поясняется с помощью рисунка \ref{modules}, описывающего разбиение на модули системы взаимодействия с пользователем.
+\addimghere{modules}{0.75}{Принцип модульности на примере подсистемы взаимодействия с пользователем}{modules}
 
 Излишняя детализация не требуется, поэтому остальные системы на модули принято решение не разбивать.
 
 \subsection{Принцип функциональности}
 
-Принцип утверждает, что любая структура тесно связана с функцией системы и ее частей.
+Принцип определяет первичность функции по отношению к структуре, так же, как цель первична для функции.
+Другими словами, цель определяет функции системы, а функции определяют ее структуру --- совокупность элементов с их связями.
+Структура же, в свою очередь, определяет параметры системы.
 В случае придания системе новых функций полезно пересматривать ее структуру, а не пытаться втиснуть новую функцию в старую схему.
 Поскольку выполняемые функции составляют процессы, то целесообразно рассматривать отдельно процессы, функции, структуры.
-В свою очередь, процессы сводятся к анализу потоков различных видов:
-\begin{itemize}
-  \item материальный поток;
-  \item поток энергии;
-  \item поток информации;
-  \item смена состояний.
-\end{itemize}
-
-С этой точки зрения структура есть множество ограничений на потоки в пространстве и времени.
 
 Функции подсистем приведены в пункте \ref{goal}.
 
@@ -152,8 +145,7 @@
 
 Полезно введение иерархии частей и их ранжирование, что упрощает разработку системы и устанавливает порядок рассмотрения частей.
 Разработка иерархий классов является нетривиальной задачей.
-Грамотно спроектированные иерархии классов позволяют создавать высокоэффективные системы.
-Плохо спроектированная иерархия приводит к созданию сложных и запутанных систем.
+Грамотно спроектированные иерархии классов позволяют создавать высокоэффективные системы, плохо спроектированная иерархия приводит к созданию сложных и запутанных систем.
 
 Выполнение принципа иерархичности для разрабатываемой системы на примере подсистемы защиты и обеспечения целостности данных проиллюстрировано на рисунке \ref{hierarchy-princ}.
 \addimghere{hierarchy-princ}{1}{Принцип иерархии на примере подсистемы защиты и обеспечения целостности данных}{hierarchy-princ}
@@ -163,13 +155,9 @@
 Степень централизации должна быть минимальной, обеспечивающей выполнение поставленной цели.
 Соотношение централизации и децентрализации определяется уровнями, на которых вырабатываются и принимаются управленческие решения.
 
-Недостаток децентрализованного управления --- увеличение времени адаптации системы.
-Он существенно влияет на функционирование системы в быстро меняющихся средах.
-То, что в централизованных системах можно сделать за короткое время, в децентрализованной системе будет осуществляться весьма медленно.
-Данный недостаток нивелируется налаживанием горизонтальных связей.
-
+Недостатком децентрализованного управления является увеличение времени адаптации системы, которое существенно влияет на функционирование системы в быстро меняющихся средах.
+То, что в централизованных системах можно сделать за короткий промежуток времени, в децентрализованной системе будет осуществляться весьма медленно.
 Недостатком централизованного управления является сложность управления из-за огромного потока информации, подлежащей переработке в старшей системе управления.
-Поэтому в сложной системе обычно присутствуют два уровня управления.
 В медленно меняющейся обстановке децентрализованная часть системы успешно справляется с адаптацией поведения системы к среде и с достижением глобальной цели системы за счет оперативного управления, а при резких изменениях среды осуществляется централизованное управление по переводу системы в новое состояние.
 
 Например, можно выполнить декомпозицию подсистемы взаимодействия с пользователем таким образом:
@@ -208,12 +196,11 @@
 
 \subsection{Принцип учета случайностей}
 
-Принцип утверждает, что можно иметь дело с системой, в которой структура, функционирование или внешние воздействия не полностью определены.
+Можно иметь дело с системой, в которой структура, функционирование или внешние воздействия не полностью определены.
 
 Сложные системы не всегда подчиняются вероятностным законам.
-В таких системах можно оценивать <<наихудшие ситуации>> и рассмотрение проводить для них.
-Этот способ обычно называют методом гарантируемого результата.
-Он применим, когда неопределенность не описывается аппаратом теории вероятностей.
+В таких системах можно оценивать <<наихудшие>> ситуации и проводить рассмотрение для них.
+Этот способ обычно называют методом гарантируемого результата, он применим, когда неопределенность не описывается аппаратом теории вероятностей.
 
 При наличии информации о вероятностных характеристиках случайностей можно определять вероятностные характеристики выходов в системе.
 
@@ -229,8 +216,8 @@
 
 Кроме того, необходимо вести контроль успешности и целостности проведения операций с компонентами системы, данными пользователей и корректно обрабатывать исключения, возникновение которых возможно в процессе работы системы.
 
-Перечисленные принципы обладают высокой степенью общности.
+Перечисленные выше принципы обладают высокой степенью общности.
 Такая интерпретация может привести к обоснованному выводу о незначимости какого-либо принципа.
-Однако знание и учет принципов позволяют лучше увидеть существенные стороны решаемой проблемы, учесть весь комплекс взаимосвязей, обеспечить системную интеграцию.
+Однако знание и учет принципов позволяет лучше увидеть существенные стороны решаемой проблемы, учесть весь комплекс взаимосвязей, обеспечить системную интеграцию.
 
 \clearpage
